--- a/Components/Modals/FormModal.scss
+++ b/Components/Modals/FormModal.scss
@@ -43,55 +43,64 @@
             }
             cursor: pointer;
             font-family: Arial;
-            color: #F65261;
+            font-size: 10px;
+            color: #f65261;
             border-radius: 5px;
-            height: .5rem;
+            height: 0.5rem;
             width: 25rem;
-            background: url("../../Assets/Images/arrow.svg") 96.5% 50% no-repeat rgba(85, 85, 85, 0.5);
+            background: url("../../Assets/Images/arrow.svg") 96.5% 50% no-repeat
+                rgba(85, 85, 85, 0.5);
             background-size: 16px 17px;
-            line-height: 8px;
+            line-height: 9px;
             resize: none;
 
-            @media(max-width: 540px) {
+            @media (max-width: 540px) {
                 width: 16rem;
             }
         }
 
         .dropdown {
-            border: 1px solid grey;
-            margin-top: 75px;
             position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
             display: flex;
             flex-direction: column;
+            padding: 5px 16px;
+            border: 1px solid grey;
+            margin-top: 75px;
+            left: 50%;
+            transform: translateX(-50%);
             width: 25rem;
-            height: 15.5rem;
+            height: fit-content;
             border-radius: 5px;
 
             .option {
-                border: none;
-                margin: 0; 
-                overflow: hidden;
+                &:hover {
+                    cursor: pointer;
+                }
                 position: relative;
                 display: flex;
                 flex-direction: row;
                 align-items: center;
-                padding: .75rem 0;
-    
+                height: 0.05rem;
+                border: none;
+                margin: 0;
+                overflow: hidden;
+
+                padding: 0.75rem 0;
+
                 &__checkbox {
-                    height: auto;
+                    height: 0.65rem;
                     width: auto;
                 }
 
                 &__text {
+                    font-size: 12px;
                     position: relative;
-                    top: .1rem;
-                    padding-left: .5rem;
+                    top: 0.2rem;
+                    padding-left: 0.5rem;
                 }
             }
 
-            @media(max-width: 540px) {
+            @media (max-width: 540px) {
                 width: 16rem;
             }
         }
@@ -112,7 +121,7 @@
         .error {
             height: 1rem;
             width: 27rem;
-            padding: .2rem 0 0 0;
+            padding: 0.2rem 0 0 0;
             margin: 0;
             font-weight: bold;
             font-size: 12px;
