--- a/styles/Header/Header.scss
+++ b/styles/Header/Header.scss
@@ -43,16 +43,20 @@
         .search-bar {
             display: flex;
             flex-direction: row;
-            justify-content: center;
-            height: 2.25rem;
+            justify-content: space-between;
+            height: 6rem;
+            width: 41.5rem;
+
+            @media(max-width: 700px) {
+                width: auto;
+            }
 
             &__input {
                 border: none;
                 border-radius: 3px;
                 height: 2.5rem;
                 width: 30rem;
-                margin-right: 0.5rem;
-                padding: 0 0.5rem 0 0.5rem;
+                padding: 0 0.5rem;
                 letter-spacing: 1px;
                 color: white;
                 background: rgba(85, 85, 85, 0.5);
@@ -61,13 +65,6 @@
                     outline: none;
                 }
 
-                @media(max-width: 815px) {
-                    width: 20rem; 
-                }
-
-                @media(max-width: 530px) {
-                    width: 12.5rem; 
-                }
             }
 
 
