--- a/styles/Header/Header.scss
+++ b/styles/Header/Header.scss
@@ -65,6 +65,18 @@
                     outline: none;
                 }
 
+                @media(max-width: 700px) {
+                    width: 22.5rem;
+                }
+
+                @media(max-width: 650px) {
+                    width: 20rem;
+                }
+
+                @media(max-width: 450px) {
+                    width: 13.5rem;
+                }
+
             }
 
 
